<resources>
    <string name="app_name">Ponto</string>
    <string name="cadastro_emplyee">Perfil Funcionario</string>
    <string name="title_activity_principal">MainActivity</string>
    <string name="title_pontos">Pontos</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="preencha_campos">Preencha todos os campos!</string>
    <string name="erro_usuario">Erro de usuario e/ou senha!</string>
    <string name="erro_senha">Senha está errada!</string>
    <string name="cadastro_feito">Cadastro efetuado com sucesso!</string>
    <string name="erro_inesperado">Erro inesperado aconteceu!</string>
    <string name="buttom_back">Buttom Back</string>
    <string name="entre_aqui">Entre aqui!</string>
    <string name="se_voc_j_tiver_conta">Você já tem conta?</string>
    <string name="criar_conta">criar conta</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="image_email">Image Email</string>
    <string name="image_name">Image Name</string>
    <string name="image_senha">Image Senha</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="preencha_os_dados_abaixo">Preencha os dados abaixo</string>
    <string name="logo_digital">Logo Digital</string>
    <string name="login">Login</string>
    <string name="fa_a_login_para_continuar">Faça login para continuar</string>
    <string name="entrar">entrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="n_o_tem_conta">Não tem conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="senhas_diferentes">Senhas estão diferentes!</string>
    <string name="login_feito">Login feito com sucesso!</string>
    <string name="bem_vindo">Seja bem-vindo</string>
    <string name="bem_vindo_de_volta">Bem-vindo de volta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="cargo">Cargo</string>
    <string name="cadastro">Cadastro</string>
    <string name="funcionario">Funcionário</string>
    <string name="funcionarios">Funcionários</string>
    <string name="_10_fev">10 Fev</string>
    <string name="_00_00">--:--</string>
    <string name="ola">Olá,</string>
    <string name="usuario">Usuário</string>
    <string name="exclamacao">!</string>
    <string name="sair">Sair</string>
    <string name="registrar">Cadastrar</string>
    <string name="opcoes">Opções</string>
    <string name="pontos_recentes">Pontos Recentes</string>
    <string name="perfil_funcionario">Perfil Funcionário</string>
    <string name="nome_do_funcionario">Nome do Funcionário</string>
    <string name="bom_dia">Bom dia,</string>
    <string name="boa_tarde">Boa tarde,</string>
    <string name="boa_noite">Boa noite,</string>
    <string name="cancelado">Cancelado!</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecione_funcionario">Selecione o Funcionário</string>
    <string name="editar_funcionario">Editar Funcionário</string>
    <string name="editar">EDITAR</string>
    <string name="filtrar_funcionario">Filtrar pontos por funcionário</string>
    <string name="deseja_sair">Deseja sair do App?</string>
    <string name="nao_foi_possivel_cadastrar">Não foi possível fazer o cadastro!</string>
    <string name="nao_foi_possivel_editar">Não foi possível fazer o cadastro!</string>
    <string name="precisa_add_funcionarios">Você precisa adicionar funcionários!</string>
    <string name="adicionado_sucesso">Adicionado com sucesso!</string>
    <string name="ponto_adicionado_sucesso">Ponto adicionado com sucesso!</string>
    <string name="nao_possivel_add_ponto">Atingido limite de batidas diário!</string>
    <string name="filtrar">Filtrar</string>
    <string name="todos">Todos</string>
    <string name="nenhum_ponto_registrado">Nenhum ponto registrado!</string>
    <string name="removido_sucesso">removido com sucesso!</string>
    <string name="nao_foi_possivel_remover">Não foi possível remover!</string>
    <string name="deseja_remover_funcionario">Deseja remover este funcionário?</string>
    <string name="editado_sucesso">Funcionário editado com sucesso</string>
    <string name="horario_obrigatorio">Horário Obrigatório</string>
    <string name="digite_nome">Digite Nome</string>
    <string name="digite_email">Digite Email</string>
    <string name="digite_cargo">Digite Cargo</string>
    <string name="digite_phone">Digite Telefone</string>
    <string name="digite_admissao">Digite Admissão</string>
    <string name="digite_aniversario">Digite Aniversário</string>
    <string name="pontos_registrados">Pontos Registrados</string>
    <string name="pontos_editado">Ponto editado com sucesso!</string>
    <string name="hoje">Hoje</string>
    <string name="pesquisar">Pesquisar funcionário</string>
    <string name="nenhum_funcionario_encontrado">Nenhum funcionário econtrado!</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="permissao_negada">Permissão negada!</string>
    <string name="clicque_hora_para_editar">Clique na hora para editar!</string>
    <string name="remover">Remover</string>
    <string name="sair_app">Deseja sair do App?</string>
    <string name="pontos_hoje">Pontos de hoje</string>
</resources>