<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_home"
        android:title="@string/title_cadastro" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_home"
        android:title="@string/title_perfil" />

    <item
        android:id="@+id/navigation_points"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_pontos" />

    <item
        android:id="@+id/navigation_employee"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/funcionarios" />

</menu>