<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.app_point.activitys.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_points"
        android:name="com.example.app_point.activitys.ui.points.PointsFragment"
        android:label="@string/title_pontos"
        tools:layout="@layout/fragment_points" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.app_point.activitys.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.app_point.activitys.ui.register.RegisterFragment"
        android:label="@string/title_cadastro"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_employee"
        android:name="com.example.app_point.activitys.ui.employee.EmployeeFragment"
        android:label="@string/funcionarios"
        tools:layout="@layout/fragment_employee" />

</navigation>