<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_ponto"
        android:name="com.example.app_point.fragments.pontos.HomeFragment"
        android:label="@string/title_pontos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.app_point.fragments.profile.NotificationsFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.app_point.fragments.register.RegisterEmployeeFragment"
        android:label="@string/title_cadastro"
        tools:layout="@layout/fragment_config" />


</navigation>