<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:fillAfter="true"
    android:interpolator="@android:anim/linear_interpolator"
    android:padding="16dp"
    tools:context=".activitys.ActivityLoginUser">

    <ImageView
        android:id="@+id/logo_digital"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_digital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/logo_digital" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_make_login"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/letrashint"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_login"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_login"
        app:layout_constraintStart_toEndOf="@+id/image_view_user"
        app:layout_constraintTop_toTopOf="@+id/toolbar_login"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_user"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:singleLine="true"
            android:textColor="@color/letras"
            android:textColorHint="@color/letras"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_login"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_login"
            app:layout_constraintStart_toEndOf="@+id/image_view_user"
            app:layout_constraintTop_toTopOf="@+id/toolbar_login"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_senha"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_login"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/letrashint"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_senha"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_senha"
        app:layout_constraintStart_toEndOf="@+id/image_view_senha"
        app:layout_constraintTop_toTopOf="@+id/toolbar_senha"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_senha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:singleLine="true"
            android:textColor="@color/letras"
            android:textColorHint="@color/letras"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_senha"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_senha"
            app:layout_constraintStart_toEndOf="@+id/image_view_senha"
            app:layout_constraintTop_toTopOf="@+id/toolbar_senha"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_view_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_login"
        app:layout_constraintStart_toStartOf="@+id/toolbar_login"
        app:layout_constraintTop_toTopOf="@+id/toolbar_login"
        app:layout_constraintVertical_bias="0.527"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/image_name" />

    <ImageView
        android:id="@+id/image_view_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:scaleType="center"
        android:src="@drawable/ic_lock_write"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_senha"
        app:layout_constraintStart_toStartOf="@+id/toolbar_senha"
        app:layout_constraintTop_toTopOf="@+id/toolbar_senha"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/image_senha" />


    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_make_login"
        app:layout_constraintTop_toBottomOf="@+id/logo_digital"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_make_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/fa_a_login_para_continuar"
        android:textColor="@color/letras"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/toolbar_login"
        app:layout_constraintTop_toBottomOf="@+id/text_login"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttom_login_user"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back_buttom"
        android:text="@string/entrar"
        android:textColor="@color/back"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_senha"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_esquecer_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/text_new_account"
        android:text="@string/esqueceu_sua_senha"
        android:textColor="@color/fundo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/text_new_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttom_login_user" />

    <TextView
        android:id="@+id/text_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="4dp"
        android:text="@string/n_o_tem_conta"
        android:textColor="@color/letras"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/text_new_account"
        android:text="@string/cadastre_se"
        android:textColor="@color/fundo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_new_account"
        app:layout_constraintStart_toEndOf="@+id/text_new_account"
        app:layout_constraintTop_toTopOf="@+id/text_new_account"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>