<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".activitys.RegisterEmployeeActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="Cadastrar Funcionário"
        android:textColor="@color/letrashint"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_back_employee"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/buttom_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/buttom_back" />

    <Button
        android:id="@+id/buttom_register_user"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back_buttom"
        android:text="Cadastrar"
        android:textColor="@color/back"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha7"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_name"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_email"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_name"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_email"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha2"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha3"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha2"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha4"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha3"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha5"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha4"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha6"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha5"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirme_senha7"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirme_senha6"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/letrashint"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_name"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_name"
        app:layout_constraintStart_toEndOf="@+id/image_view_username"
        app:layout_constraintTop_toTopOf="@+id/toolbar_name"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:singleLine="true"
            android:textColor="@color/letras"
            android:textColorHint="@color/letrashint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_name"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_name"
            app:layout_constraintStart_toEndOf="@+id/image_view_username"
            app:layout_constraintTop_toTopOf="@+id/toolbar_name"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/letrashint"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_email"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_email"
        app:layout_constraintStart_toEndOf="@+id/image_view_email"
        app:layout_constraintTop_toTopOf="@+id/toolbar_email"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColor="@color/letras"
            android:textColorHint="@color/letrashint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_email"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_email"
            app:layout_constraintStart_toEndOf="@+id/image_view_email"
            app:layout_constraintTop_toTopOf="@+id/toolbar_email"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/letrashint"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_confirme_senha"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_confirme_senha"
        app:layout_constraintStart_toEndOf="@+id/image_view_confirme_senha"
        app:layout_constraintTop_toTopOf="@+id/toolbar_confirme_senha"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_confirme_senha2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cargo"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/letras"
            android:textColorHint="@color/letrashint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_confirme_senha"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_confirme_senha"
            app:layout_constraintStart_toEndOf="@+id/image_view_confirme_senha"
            app:layout_constraintTop_toTopOf="@+id/toolbar_confirme_senha"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:scaleType="center"
        android:src="@drawable/ic_email_write"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_email"
        app:layout_constraintStart_toStartOf="@+id/toolbar_email"
        app:layout_constraintTop_toTopOf="@+id/toolbar_email"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/image_email" />

    <ImageView
        android:id="@+id/image_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_name"
        app:layout_constraintStart_toStartOf="@+id/toolbar_name"
        app:layout_constraintTop_toTopOf="@+id/toolbar_name"
        app:layout_constraintVertical_bias="0.527"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/image_name" />

    <ImageView
        android:id="@+id/image_view_confirme_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:scaleType="center"
        android:src="@drawable/ic_lock_write"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_confirme_senha"
        app:layout_constraintStart_toStartOf="@+id/toolbar_confirme_senha"
        app:layout_constraintTop_toTopOf="@+id/toolbar_confirme_senha"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/image_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>